# SPYDIR

./: .gitignore  README.md  pyproject.toml  requirements.txt
SPYDIR/: __init__.py  history.py  news.py  related.py  stock.py  stock_client.py  wiki.py
SPYDIR/base/: base.py  process_yq.py
SPYDIR/data/: cache.py
SPYDIR/excel/: Stock_Output.xlsm  Stock_Template.xlsm  create_file.py  damo_inputs.xlsx  get_excel.py
SPYDIR/financial/: capm.py  helpers.py  model.py  statements.py
SPYDIR/logs/: log_setup.py
SPYDIR/markets/: market.py  stats.py
SPYDIR/pdf/: get_report.py  helpers.py  stock_report.py
SPYDIR/utils/: format_helpers.py  helpers.py
tests/: test_base.py  test_cache.py  test_history.py  test_markets.py  test_reports.py  test_stock.py
